The beggining of main page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,31 @@
 ---
-
+// src/pages/index.astro
 ---
 
+<!DOCTYPE HTML>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<title>Prism - Daily Tracker</title>
+
+		<!-- Chart.js CDN -->
+		<script src="https://cdn.jsdeliver.net/npm/chart.js"></script>
+
+		<style>
+
+		</style>
 	</head>
+
 	<body>
-		<h1>Astro</h1>
+		<header>
+			<div class="logo"></div>
+			<div>
+				<div style="font-weight:700">Prism</div>
+				<div style="
+				font-size:12px; 
+				color:var(--muted">reveal the hidden patterns of your day</div>
+			</div>
+		</header>
 	</body>
 </html>
