First global.css

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 // src/pages/index.astro
+
+import "../styles/global.css";
 ---
 
 <!DOCTYPE HTML>
@@ -12,9 +14,6 @@
 		<!-- Chart.js CDN -->
 		<script src="https://cdn.jsdeliver.net/npm/chart.js"></script>
 
-		<style>
-
-		</style>
 	</head>
 
 	<body>
