--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 // src/pages/index.astro
 
 import "../styles/global.css";
+import EntriesList from "../components/EntriesList.astro";
 ---
 
 <!DOCTYPE HTML>
@@ -102,6 +103,7 @@ import "../styles/global.css";
 				<h3 style="margin-top: 12px;">Today's entries</h3>
 				<ul id="entriesList" style="margin-top: 8px;"></ul>
 			</section>
+			<EntriesList />
 		</main>
 
 		<!-- CHARTS -->
